--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
         /* High-Fidelity Scrollbar matching user reference image */
         .custom-scrollbar::-webkit-scrollbar {
             width: 14px;
+            height: 14px;
         }
         .custom-scrollbar::-webkit-scrollbar-track {
             background: #0f172a; /* Deep dark gutter */
             border-left: 1px solid rgba(255, 255, 255, 0.05);
+            border-top: 1px solid rgba(255, 255, 255, 0.05);
         }
         .custom-scrollbar::-webkit-scrollbar-thumb {
             background: #64748b; /* Slate-500 grey thumb */
@@ -43,6 +45,9 @@
         }
         .custom-scrollbar::-webkit-scrollbar-thumb:hover {
             background: #94a3b8; /* Lighter grey on hover */
+        }
+        .custom-scrollbar::-webkit-scrollbar-corner {
+            background: #0f172a;
         }
 
         /* Editor Overrides */
